--- a/front/odyssey/src/index.css
+++ b/front/odyssey/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+html,body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  height: 100%;
+  width: 100%;
 }
+#root {
+  min-height: 100%;
+  background-color: #fcb571;
+}
+@media  screen  and (min-width: 640px) {
+  #root {
+      height: 100%;
+  }
+}
+@media screen and (min-width: 600px) {
+.MuiGrid-grid-sm-6 {
+    max-width: 42% !important;
+}}
